<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/Widget.Design.AppBarLayout"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:layout_width="match_parent"
            android:backgroundTint="@color/dark_snow"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/dark_snow"
                android:layout_gravity="start"
                android:layout_marginHorizontal="30dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:text="@string/submit"
                android:onClick="onClickButtonSend"/>

        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/newPostMapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_marginBottom="200dp"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />



    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:onClick="onClickButtonAddCheckpoint"
        android:text="@string/add_checkpoint"
        app:layout_constraintBottom_toBottomOf="@id/newPostMapFragment"
        app:layout_constraintEnd_toEndOf="@id/newPostMapFragment"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/newPostMapFragment"
        app:layout_constraintStart_toStartOf="@id/newPostMapFragment">

        <Button
            android:id="@+id/mapTypeMap"
            android:paddingHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/map"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/white"
            android:background="@drawable/grey_border"/>
        <Button
            android:id="@+id/mapTypeHyb"
            android:paddingHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hybrid"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/white"
            android:background="@drawable/grey_border"/>
        <Button
            android:id="@+id/mapTypeSat"
            android:paddingHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/satellite"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/white"
            android:background="@drawable/grey_border"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cordsRecView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/newPostMapFragment" />


</androidx.constraintlayout.widget.ConstraintLayout>