<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DynmapActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/Widget.Design.AppBarLayout"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/dark_snow">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"

                android:backgroundTint="@color/dark_snow"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />

            <LinearLayout
                android:id="@+id/deleteButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/charcoal"
                    android:contentDescription="@string/delete_post"
                    android:paddingVertical="5dp"
                    android:src="@drawable/ic_action_trash" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/charcoal"
                    android:gravity="center_vertical"
                    android:text="@string/delete_post" />
            </LinearLayout>

        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/mapName"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/dark_snow"
        android:paddingHorizontal="10dp"
        android:text="@string/map"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/newPostMapFragment"
        app:layout_constraintTop_toBottomOf="@id/appBar" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/newPostMapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/newPostMapFragment"
        app:layout_constraintStart_toStartOf="@id/newPostMapFragment">

        <Button
            android:id="@+id/mapTypeMap"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/grey_border"
            android:paddingHorizontal="10dp"
            android:text="@string/map"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/mapTypeHyb"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/grey_border"
            android:paddingHorizontal="10dp"
            android:text="@string/hybrid"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/mapTypeSat"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/grey_border"
            android:paddingHorizontal="10dp"
            android:text="@string/satellite"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>