<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_new_post_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/french_bistre"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mapImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/routemap"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/routeName"
                style="@style/EditText"
                android:theme="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="10dp"
                android:hint="@string/route_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mapImage" />

            <EditText
                android:id="@+id/routeLength"
                style="@style/EditText"
                android:theme="@style/EditText"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginVertical="10dp"
                android:hint="@string/route_length"
                android:importantForAutofill="no"
                android:inputType="time"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="@+id/routeName"
                app:layout_constraintTop_toBottomOf="@id/routeName"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/routeColor"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/round_border"
                android:backgroundTintMode="multiply"
                android:backgroundTint="@color/old_rose"
                android:textColor="@color/white"
                android:text="@string/route_color"
                android:importantForAutofill="no"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/routeName"
                app:layout_constraintTop_toBottomOf="@id/routeName" />

            <Button
                android:id="@+id/send"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_marginVertical="15dp"
                android:background="@drawable/round_border"
                android:backgroundTintMode="multiply"
                android:backgroundTint="@color/charcoal"
                android:textColor="@color/white"
                android:text="@string/send"
                android:importantForAutofill="no"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/routeName"
                app:layout_constraintTop_toBottomOf="@id/routeColor"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>